--- a/frontend/src/components/Sidebar/index.css
+++ b/frontend/src/components/Sidebar/index.css
@@ -6,10 +6,11 @@
     display: flex;
     align-items: center;
     top: 0;
-    right : 0;
+    right: 0;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.9);
     justify-content: space-between; 
     padding: 0 20px;
+    z-index: 1000; 
 }
 
 .nav-bar nav {
@@ -83,34 +84,9 @@
     color: #fff;
 }
 
-.nav-bar .mobile-toggle {
-    display: none;
-    font-size: 28px;
-    color: #f0f0f083;
-    cursor: pointer;
-}
-
-.nav-bar.mobile-show nav {
-    display: block;
-    position: absolute;
-    top: 100px;
-    left: 0;
-    width: 100%;
-    background-color: #184E77;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.nav-bar.mobile-show nav a {
-    margin: 10px 0;
-}
 
 @media (max-width: 768px) {
-    .nav-bar nav {
-        display: none; 
-    }
-
     .nav-bar .mobile-toggle {
-        display: block; 
+        display: block;
     }
 }
