--- a/frontend/src/components/Type/index.css
+++ b/frontend/src/components/Type/index.css
@@ -30,6 +30,7 @@
 }
 
 @media (max-width: 768px) {
+    
     .type-box {
         width: 150px;
         height: 150px;
@@ -38,15 +39,10 @@
     .container.type-page {
         padding: 15px;
     }
-}
 
-@media (max-width: 480px) {
-    .type-box {
-        width: 120px;
-        height: 120px;
-    }
-
-    .container.type-page {
-        padding: 10px;
+    .page-title{
+        padding: 20px;
     }
 }
+
+
