--- a/frontend/src/components/PokemonData/index.css
+++ b/frontend/src/components/PokemonData/index.css
@@ -18,7 +18,6 @@ body {
 }
 
 table {
-  width: 100%;
   border-collapse: collapse;
   font-size: 15px;
   background-color: #fff;
@@ -27,6 +26,7 @@ table {
   margin: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 
 thead {
   background-color: #007BFF;
@@ -52,44 +52,20 @@ tbody tr:hover {
 }
 
 @media (max-width: 768px) {
-  .table-container {
-    padding: 20px; 
+  .pokemon-page {
+    padding: 10px;
   }
-
-  .page-title {
-    font-size: 28px;
-    margin-bottom: 20px;
+  
+  .table-wrapper{
+    width: 220px;
   }
-
-  table {
-    font-size: 14px;
-  }
-
   thead th {
+    padding: 12px 8px;
     font-size: 12px;
   }
-
+  
   tbody td {
-    padding: 10px;
-  }
-}
-
-@media (max-width: 480px) {
-  .table-container {
-    padding: 10px;
-  }
-
-
-  table {
+    padding: 10px 8px;
     font-size: 13px;
   }
-
-  thead th {
-    font-size: 11px; 
-  }
-
-  tbody td {
-    padding: 8px;
-  }
 }
-
